user template integration

--- a/src/index.html
+++ b/src/index.html
@@ -6,8 +6,34 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link href="https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900" rel="stylesheet">
+  <!-- Bootstrap core CSS -->
+  <link href="assets/landing/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+ 
+
+
+  <!-- Additional CSS Files -->
+  <link rel="stylesheet" href="assets/landing/css/fontawesome.css">
+  <link rel="stylesheet" href="assets/landing/css/templatemo-edu-meeting.css">
+  <link rel="stylesheet" href="assets/landing/css/owl.css">
+  <link rel="stylesheet" href="assets/landing/css/lightbox.css">
+  
+ 
+
 </head>
 <body>
+  <script src="assets//landing/vendor/jquery/jquery.min.js"></script>
+    <script src="assets/landing/vendor/bootstrap/js/bootstrap.min.js"></script>
+
+    <script src="assets/landing/js/isotope.js"></script>
+    <script src="assets/landing/js/owl-carousel.js"></script>
+    <script src="assets/landing/js/lightbox.js"></script>
+    <script src="assets/landing/js/tabs.js"></script>
+    <script src="assets/landing/js/video.js"></script>
+    <script src="assets/landing/js/slick-slider.js"></script>
+    <script src="assets/landing/js/custom.js"></script>
+
   <app-root></app-root>
 </body>
+
 </html>
